// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders 1`] = `
.c3 {
  pointer-events: none;
  position: absolute;
  top: 45%;
  right: 15px;
  width: 0;
  height: 0;
}

.c2 {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 8.6px solid #495057;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  background-color: #e9ecef;
  border-radius: 2em;
  font-size: 16px;
  padding: 10px 40px 10px 15px;
  cursor: pointer;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<Select>
  <Select__StyledSelectContainer>
    <div
      className="c0"
    >
      <Select__StyledSelect>
        <select
          className="c1"
        />
      </Select__StyledSelect>
      <Select__ArrowDown>
        <Select__Arrow
          className="c2"
        >
          <span
            className="c2 c3"
          />
        </Select__Arrow>
      </Select__ArrowDown>
    </div>
  </Select__StyledSelectContainer>
</Select>
`;

exports[`Select renders with children 1`] = `
.c3 {
  pointer-events: none;
  position: absolute;
  top: 45%;
  right: 15px;
  width: 0;
  height: 0;
}

.c2 {
  border-left: 5px solid transparent;
  border-right: 5px solid transparent;
  border-top: 8.6px solid #495057;
}

.c0 {
  display: inline-block;
  position: relative;
}

.c1 {
  background-color: #e9ecef;
  border-radius: 2em;
  font-size: 16px;
  padding: 10px 40px 10px 15px;
  cursor: pointer;
  border: none;
  outline: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.c1:-moz-focusring {
  color: transparent;
  text-shadow: 0 0 0 #000;
}

<Select>
  <Select__StyledSelectContainer>
    <div
      className="c0"
    >
      <Select__StyledSelect>
        <select
          className="c1"
        >
          <option
            value="1"
          >
            One
          </option>
          <option
            value="2"
          >
            Two
          </option>
        </select>
      </Select__StyledSelect>
      <Select__ArrowDown>
        <Select__Arrow
          className="c2"
        >
          <span
            className="c2 c3"
          />
        </Select__Arrow>
      </Select__ArrowDown>
    </div>
  </Select__StyledSelectContainer>
</Select>
`;
